overflow-x fixed

--- a/css/profile.css
+++ b/css/profile.css
@@ -7,10 +7,11 @@ body{
 .profile{
     position: absolute;
     top:0px;
-    width:100vw;
+    width:100%;
     height: 100%;
     padding-top: 50px;
     margin: auto;
+    overflow-x:hidden;
     background-color: var(--sec-color);
 } 
 
